--- a/mailsignature.html
+++ b/mailsignature.html
@@ -32,10 +32,7 @@
 					<td style="margin:0;padding:0;font-family:'Lucida Grande',sans-serif;white-space:nowrap;">
                         <a href="tel:+1-347-688-7226" style="text-decoration:none;color:#b0b0b0;">
                             <span style="color:#b0b0b0">+34</span>
-                            <span style="color:#b0b0b0"> 622</span>
-                            <span style="color:#e0e0e0"> </span>
-                            <span style="color:#b0b0b0">488</span>
-                            <span style="color:#b0b0b0">321</span>
+                            <span style="color:#b0b0b0"> 622 488 321</span>
                         </a>
 						<span style="color:e0e0e0;">|</span>
                         <a href="http://twitter.com/altercmdweb" style="border:none;text-decoration:none;color:#b0b0b0;">
