Icons and Style

--- a/mailsignature.html
+++ b/mailsignature.html
@@ -7,43 +7,65 @@
 </head>
 <body>
 <br />
-<table width='320' id="sig" cellspacing='0' cellpadding='0' border-spacing='0' style="margin:0;padding:0;">
-	<tr>
-		<td width="86" style="width:86px;margin:0;padding:0; border-right: 3px solid #292929;">
-            <a href='https://pc-solucion.es' style="border:none;text-decoration:none;">
-                <img src="https://res.cloudinary.com/pcsolucion/image/upload/v1607672553/Firma/firma.png" alt="PC Solución" style="border:none;width:86px;">
-            </a>
+<table cellspacing="0" cellpadding="0" style="font-family: Arial, sans-serif;">
+	<tbody>
+	  <tr>
+		<td
+		  rowspan="6"
+		  valign="top"
+		  width="100"
+		  style="border-right: 4px solid #292929;"
+		>
+		  <a href="https://pc-solucion.es/" target="_blank" rel="noopener">
+			<img
+			  style="display: block; margin: 20px auto 20px auto;"
+			  src="https://res.cloudinary.com/pcsolucion/image/upload/v1607672553/Firma/firma.png"
+			  alt="Logo"
+			  width="75"
+			  />
+		</a>
 		</td>
-		<td width="10" style="width:10px;">&nbsp;</td>			
-		<td valign='top' style="margin:0;padding:0;">
-			<table id="sig2" cellspacing='0' cellpadding='0' border-spacing='0' style="padding:0;margin:0;font-family:'Lucida Grande',sans-serif;font-size:14px;color:#b0b0b0;border-collapse:collapse;-webkit-text-size-adjust:none;">
-				<tr style="margin:0;padding:0;">
-					<td style="margin:0;padding:0;font-family:'Lucida Grande',sans-serif;white-space:nowrap;">
-						<strong><a href="mailto:contacto@pc-solucion.es" style="border:none;text-decoration:none;color:#008ec2;"><span style="color:#049cdb">José Manuel Moreno</span></a></strong><span style="color:e0e0e0;">,</span>
-						<span style="color:#b0b0b0;">Webmaster</span>
-					</td>
-				</tr>
-				<tr style="margin:0;padding:0;color:#b0a49b;">
-					<td style="margin:0;padding:0;font-family:'Lucida Grande',sans-serif;white-space:nowrap;">
-					    <span style="color:#b0b0b0">A Coruña - España</span>
-					</td>
-				</tr>
-				<tr style="margin:0;padding:0;color:#b0a49b;">
-					<td style="margin:0;padding:0;font-family:'Lucida Grande',sans-serif;white-space:nowrap;">
-                        <a href="tel:+1-347-688-7226" style="text-decoration:none;color:#b0b0b0;">
-                            <span style="color:#b0b0b0">+34</span>
-                            <span style="color:#b0b0b0"> 622 488 321</span>
-                        </a>
-						<span style="color:e0e0e0;">|</span>
-                        <a href="http://twitter.com/altercmdweb" style="border:none;text-decoration:none;color:#b0b0b0;">
-                            <span style="color:#b0b0b0">Twitter</span>
-                        </a>
-					</td>
-				</tr>				        
-			</table>
+		<td style="padding-left: 15px;">
+		  <table cellspacing="0" cellpadding="0">
+			<tbody>
+			  <tr>
+				<td style="height: 30px;" valign="top">
+				  <strong><span>José Manuel Moreno</span></strong
+				  >&nbsp;<strong style="color: #008ec2;"
+					><span>|&nbsp;</span>Webmaster & Redactor</strong
+				  >
+				</td>
+			  </tr>
+			  <tr>
+				<td style="height: 25px;" valign="top">
+				  <span><img src="https://res.cloudinary.com/pcsolucion/image/upload/v1607969249/Firma/marcador.png"/></span
+				  ><span><span>&nbsp;&nbsp;A Coruña - España</span>&nbsp;</span><span
+				
+					><br/><img src="https://res.cloudinary.com/pcsolucion/image/upload/v1607969452/Firma/contacto.png"/><span>&nbsp;&nbsp;contacto@pc-solucion.es</span></span
+				  >&nbsp;<span
+					>|<a
+					  style="
+						color: #292929;
+						text-decoration: none;
+						font-weight: bold;
+					  "
+					  href="http://www.pc-solucion.es/"
+					  target="_blank"
+					  rel="noopener"
+					  ><span>&nbsp;www.pc-solucion.es</span></a
+					></span
+				  ><span><br /></span
+				  ><span
+					><img src="https://res.cloudinary.com/pcsolucion/image/upload/v1607969593/Firma/phone.png"/><span>&nbsp;&nbsp;+34 622 123 456</span></span
+				  >
+				</td>
+			  </tr>
+			</tbody>
+		  </table>
 		</td>
-	<tr>
-</table>
+	  </tr>
+	</tbody>
+  </table>
 <br />
 &nbsp;
 </body>
